# lab

./: CMakeLists.txt  main.c
libs/data_structures/: CMakeLists.txt
libs/data_structures/matrix/: matrix.c  matrix.h
libs/data_structures/vector/: vector.c  vector.h
libs/data_structures/vectorVoid/: vectorVoid.c  vectorVoid.h
libs/task/: convert_float_num.h  evaluate_expression.h  get_best_team.h  leave_longest_word.h  matrix_transposition.h  rearrange_numbers.h  remove_polynomial.h  special_word.h  transpose_non_symmetric_matrix.h  update_product.h
libs/task_20_lab/: auto_completion.h  bin_tree.h  filter_num.h  find_median.h  game_life.h  generate_num.h  get_domains.h  get_submatrix.h  matrix_transformation.h  rearrange_string.h
